<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LocationServiceActivity"
    android:background="@color/jeebly_light_blue"
    >



    <TextView
        android:id="@+id/tv_location_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:fontFamily="@font/nexaregular"
        android:textAlignment="center"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_locationData"
        android:layout_width="353dp"
        android:layout_height="644dp"
        android:layout_margin="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_location_label"
        app:cardCornerRadius="40dp"
        android:backgroundTint="@color/jeebly_blue">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="25dp">


            <Spinner
                android:id="@+id/spinner_updateInterval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/jeebly_red"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="@font/nexaregular"
                />

            <TextView
                android:id="@+id/tv_latitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="--"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/nexaregular"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="@font/nexaregular"
                />

            <TextView
                android:id="@+id/tv_longitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="--"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/nexaregular"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/accuracy"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="@font/nexaregular"
                />

            <TextView
                android:id="@+id/tv_accuracy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="--"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/nexaregular"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/speed"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="@font/nexaregular"
                />

            <TextView
                android:id="@+id/tv_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="--"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/nexaregular"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bearing"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="@font/nexaregular"
                />

            <TextView
                android:id="@+id/tv_bearing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="--"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/nexaregular"
                />

            <TextView
                android:id="@+id/tv_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/distance_0_m"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="@font/nexaregular"
                android:layout_marginTop="20dp"
                />

            <TextView
                android:id="@+id/tv_updates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/updates_0"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="@font/nexaregular"
                android:layout_marginTop="20dp"
                />

            <TextView
                android:id="@+id/tv_averageSpeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/average_speed_0_km_h"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:fontFamily="@font/nexaregular"
                />

            <Button
                android:id="@+id/btn_startTracking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_tracking"
                android:backgroundTint="@color/jeebly_red"
                android:fontFamily="@font/nexaregular"
                />

            <Button
                android:id="@+id/btn_stopTracking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stop_tracking"
                android:backgroundTint="@color/jeebly_light_blue"
                android:enabled="false"
                android:fontFamily="@font/nexaregular"
                />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>