<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_verylight_blue"
    tools:context=".Activities.MainActivity">

    <!-- Header -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="3"
        android:background="@color/jeebly_light_blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <!-- Heading -->

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nexaregular"
            android:text="@string/employee_management"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_profileImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="centerInside"
            android:layout_margin="10dp"
            android:background="@drawable/rating_circle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="8dp"
            android:src="@drawable/user"
            />

        <ImageButton
            android:id="@+id/ibtn_location"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="centerInside"
            android:layout_margin="10dp"
            android:background="@drawable/rating_circle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/location"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="7"
        app:layout_constraintTop_toBottomOf="@id/cl_header"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_tokenCard"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toTopOf="parent"
            app:cardCornerRadius="40dp"
            android:layout_margin="20dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="40dp"
                    android:src="@drawable/circle"
                    android:layout_gravity="center"
                    android:background="@drawable/rating_circle"
                    android:scaleType="centerInside"
                    />
                <TextView
                    android:id="@+id/tv_fcm_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="FCM Token"
                    android:layout_marginStart="50dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <Button
            android:id="@+id/btn_clockIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/jeebly_red"
            android:fontFamily="@font/nexaregular"
            android:text="@string/clock_in"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/cv_tokenCard"
            app:layout_constraintEnd_toStartOf="@id/btn_clockOut"
            app:layout_constraintStart_toStartOf="parent"

            />
        <Button
            android:id="@+id/btn_clockOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/jeebly_red"
            android:fontFamily="@font/nexaregular"
            android:text="@string/clock_out"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:enabled="false"
            app:layout_constraintTop_toBottomOf="@id/cv_tokenCard"
            app:layout_constraintStart_toEndOf="@id/btn_clockIn"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_google_map"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:cardCornerRadius="40dp"
            android:layout_margin="10dp"
            android:elevation="-2dp"
            app:layout_constraintTop_toBottomOf="@id/btn_clockIn"
            app:layout_constraintBottom_toTopOf="@id/btn_permission_manager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
            <TextView
                android:id="@+id/tv_onClick_latlong_label"
                android:paddingTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:fontFamily="@font/nexaregular"
                android:textSize="13sp"
                android:textColor="@color/white"
                android:background="#B3424242"
                android:visibility="visible"
                android:textAlignment="center"
                />

        </androidx.cardview.widget.CardView>


        <Button
            android:id="@+id/btn_permission_manager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permission_manager"
            android:backgroundTint="@color/jeebly_red"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>